--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.4",
     "next": "15.0.3",
