--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-ep3",
+  "name": "grandcannabistshop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@vercel/speed-insights": "^1.1.0",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.4",
