--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@vercel/speed-insights": "^1.1.0",
     "bcryptjs": "^2.4.3",
+    "googleapis": "^150.0.1",
     "mongoose": "^8.8.4",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
