--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*.local
 .env
+lib/keys/service-account.json
 
 # vercel
 .vercel
